--- a/CustomerDatabase.csproj
+++ b/CustomerDatabase.csproj
@@ -55,6 +55,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Interfaces\IConnectionService.cs" />
+    <Compile Include="Interfaces\ICustomerService.cs" />
+    <Compile Include="Services\ConnectionService.cs" />
+    <Compile Include="Services\CustomerService.cs" />
     <Compile Include="ViewModels\CustomerListViewModel.cs" />
     <Compile Include="Views\CustomerListView.xaml.cs">
       <DependentUpon>CustomerListView.xaml</DependentUpon>
@@ -96,9 +100,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Interfaces\" />
-    <Folder Include="Services\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
