--- a/App.config
+++ b/App.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+  </startup>
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="User ID=postgres;Password=root;Host=localhost;Port=5432;Database=CustomerDB;"/>
+  </connectionStrings>
 </configuration>
