Adds AddCustomer view, viewmodel + save and cancel commands

--- a/CustomerDatabase.csproj
+++ b/CustomerDatabase.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Commands\BaseCommand.cs" />
     <Compile Include="Interfaces\ICustomerService.cs" />
     <Compile Include="Interfaces\IDataService.cs" />
+    <Compile Include="Models\Mode.cs" />
     <Compile Include="Services\CustomerService.cs" />
     <Compile Include="Services\DataService.cs" />
     <Compile Include="ViewModels\AddCustomerViewModel.cs" />
